--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </header>
     <main>
         <!-- 65% section starts here  -->
-         
+         <section class="second-section-container">
+
+         </section>
         <!-- 65% section ends here  -->
 
 
