--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
     <main>
         <!-- 65% section starts here  -->
          <section class="second-section-container">
-
-         </section>
+            <div class="second-section-content">
+            <h1>65% OFF</h1>
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3>ALL CATEGORIES</h3> 
+            </div>
+            
+                <img src="resources/New Year Photo.png" alt="" class="second-sec-img">
+   </section>
         <!-- 65% section ends here  -->
 
 
